Add back missing refs

--- a/references.bib
+++ b/references.bib
@@ -100,6 +100,20 @@ Analysis of Vibronic Mode Coupling in Molecules},
  school = {University of Wisconsin-Madison}
 }
 
+@article{CohenJeremy2021a,
+ author = {Cohen, Jeremy and Katz, Daniel S. and Barker, Michelle and Hong, Neil Chue and Haines, Robert and Jay, Caroline},
+ title = {The Four Pillars of Research Software Engineering},
+ journal = {IEEE Software},
+ publisher = {Institute of Electrical and Electronics Engineers
+(IEEE)},
+ year = {2021},
+ month = {January},
+ number = {1},
+ volume = {38},
+ pages = {97--105},
+ doi = {10.1109/ms.2020.2973362}
+}
+
 @article{DalesioLR1991a,
  author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
  title = {{EPICS} Architecture},
@@ -226,6 +240,19 @@ Electronic and Vibrational Excitations},
  year = {2022},
  url = {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
  note = {Accessed: 2022-10-02}
+}
+
+@article{NowogrodzkiAnna2019a,
+ author = {Nowogrodzki, Anna},
+ title = {How to support open-source software and stay sane},
+ journal = {Nature},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2019},
+ month = {July},
+ number = {7763},
+ volume = {571},
+ pages = {133--134},
+ doi = {10.1038/d41586-019-02046-0}
 }
 
 @manual{picam,
@@ -379,6 +406,12 @@ modular data acquisition},
  title = {yaq-traits},
  url = {https://pypi.org/project/yaq-traits},
  note = {Accessed: 2022-10-02}
+}
+
+@misc{yaq_fyi,
+ title = {yaq},
+ url = {https://yaq.fyi/},
+ note = {Accessed: 2022-11-06}
 }
 
 @misc{yaq_fyi_daemons,
