acknowledgments and statements

--- a/paper.tex
+++ b/paper.tex
@@ -328,13 +328,22 @@ This standard has some of the powerful features of facility-scale standards whil
 We have shown how this approach alleviates common problems through discussion and case studies.
 Designing around self-describing protocols is a productive approach that has great promise in scientific software development.
 
+\section*{Supplementary Material}
+
+Full set of line-count data and script used to produce Figure \ref{fig:histogram}.
+
 \begin{acknowledgments}
-  TODO
+
+The authors would like to thank all \yaq{} users and contributors.
+We would also like to acknowledge the developers of the broader open source software community upon-which this project rests.
+
+This work was supported by the National Science Foundation under grant CHE-1709060.
+
 \end{acknowledgments}
 
 \section*{Data Availability Statement}
 
-Data sharing is not applicable to this article as no new data were created or analyzed in this study.
+The data that supports the findings of this study are available within the supplementary material.
 
 \section*{References}
 % all yaq,yaqc,and yaqd citations have an unfilled "()" in them...
