--- a/paper.tex
+++ b/paper.tex
@@ -237,7 +237,7 @@ Now, using \yaq{}, the Wright Group has been able to move to Bluesky rather than
 The Wright Group uses simulated hardware to enable client development away from the active laboratory computers.
 This allows Wright Group researchers to create polished client interfaces without interrupting  ongoing experiments.
 Clients developed by the Wright Group have proved flexible enough to be used on four laser systems, each with different complements of hardware.
-The Wright Group expects to spend less energy developing control software and more energy developing creative spectroscopy experiments in future work.
+Moving forward, the Wright Group will spend less energy developing control software and more energy developing creative spectroscopy experiments.
 
 \section{Incorporating New Hardware}
 
