--- a/paper.tex
+++ b/paper.tex
@@ -250,7 +250,7 @@ Often, this means that initial hardware enablement work can be done on a researc
 Third, when developing trait-compliant protocols, it becomes easy to design and fully test your hardware interface.
 Traits are unambiguous and well-described, making an obvious target for development.
 Tooling exists to verify full trait compliance, for example you can use \texttt{yaqc-qtpy} to provide a graphical program to interact with your hardware immediately.
-Finally, as discussed in Section II, \yaq{} gives you options to design using remote hardware or unusual interfaces when necessary.
+Finally, as discussed in Section II, \yaq{} provides options to design using remote hardware or unusual interfaces when necessary.
 
 We have created several tools to aide in daemon development.
 First, a Python library, \texttt{yaqd-core}\footnote{\texttt{yaqd-core-python} available on PyPI at https://pypi.org/project/yaqd-core}, which implements shared functionality.
@@ -308,7 +308,7 @@ Because the temperature sensor daemon is its own independent program, both instr
 The growing ``ecosystem'' of \yaq{} daemons make future instruments easier and easier to develop.
 Growing this ecosystem is a collaborative effort where many \yaq{} users create portable daemons that they need and share them with the community where they will be used and improved.
 \yaq{} components can be incorporated seamlessly into existing software projects, including languages other than Python.
-For example, an existing LabVIEW project may add additional hardware support via \yaq{}.
+For example, an existing LabVIEW project may provide additional hardware support via \yaq{}.
 In this way, a more modular instrument can be built gradually without needing to overhaul all of the software simultaneously.
 
 Software documentation is famously difficult and thankless work.
