--- a/paper.tex
+++ b/paper.tex
@@ -273,7 +273,7 @@ Most interfaces, such as Brooks MFC\footnote{\texttt{yaqd-brooks-mfc-gf} source 
 Even the most complicated daemons are implemented in about 300 lines.
 Implementing \yaq{} daemons using Python is enabled through our own tooling mentioned above and the large and growing ecosystem of hardware interface tooling libraries that Python now provides\cite{pyserial, pyusb, pyvisa, pymodbus}.
 In our experience, the process of creating a new daemon involves about a day of work after communication with the hardware using Python is well understood.
-There are currently 70 daemons in the yaq project supporting at least 50 kinds of hardware, noting that some daemons support the same hardware and others are software only.
+There are currently 72 daemons in the yaq project supporting at least 66 types of hardware, noting that some daemons support the same hardware and others are software only.
 Because \yaq{} is standards based, anyone can design and publish new daemons extending our hardware support.
 A living list of all daemons and supported hardware can be found on the \yaq{} website.\footnote{See https://yaq.fyi/daemons/ and https://yaq.fyi/hardware/ for living lists of all \yaq{} daemons and supported hardware, respectively.}
 
