--- a/paper.tex
+++ b/paper.tex
@@ -140,7 +140,7 @@ Each daemon supports a collection of messages for its unique functionality, call
 When a client first connects to a daemon over TCP/IP, the daemon provides a complete description of its own protocol.
 We therefore refer to the daemons as ``self-describing''.
 
-\yaq{} introduces a concept called ``Traits'' which are collections of related messages that are shared among multiple protocols.
+\yaq{} introduces a concept called ``traits'' which are collections of related messages that are shared among multiple protocols.
 Motors implement the ``\texttt{has-position}'' trait, which defines ``\texttt{set\_position}'', ``\texttt{get\_position}'', and ``\texttt{get\_units}''.
 Sensors would implement the ``\texttt{is-sensor}'' trait which defines ``\texttt{get\_measured}'', ``\texttt{get\_channel\_names}'', and ``\texttt{get\_channel\_units}''.
 Protocols which implement a trait must support all of the messages from the trait.
@@ -156,7 +156,7 @@ The second hardware interface barrier: Certain specialty hardware have inconveni
 Since \yaq{} enables multiple machines, any hardware requirements can be addressed by putting a machine for that specific hardware on the network.
 The Raspberry Pi which drives several stepper motors can be placed onto a private network to communicate with the primary instrument computer using \yaq{}.
 Because each \yaq{} daemon is running in its own process, the software environment can be tailored to its needs.
-A client running up to date Python 3.10 communicates seamlessly with a daemon running Python 3.7.
+A client running up-to-date Python 3.11 communicates seamlessly with a daemon running Python 3.7.
 
 The third hardware interface barrier: Some hardware interfaces are blocking.
 Monolithic orchestration software often necessitates separate threads for each component hardware interface, a fragile pattern in which small mistakes become both critical and elusive errors.
@@ -165,16 +165,21 @@ In \yaq{}, each daemon is only responsible for a single hardware interface.
 It is expected that each message call over the \yaq{} interface will return rapidly, ensuring that client applications are not blocked for extended periods of time.
 This principle applies even when the message starts an action that might take several seconds to complete, such as homing a motor or initiating a measurement for a sensor.
 In these instances, the initial message simply starts the action and returns, with a separate message provided to retrieve results when they exist.
-In order to know how long to wait, the ``is-daemon`` trait provides a message called ``is\_busy'' which should return "true" while the long running action is not complete, and "false" once it is finished.
+In order to know how long to wait, the ``is-daemon`` trait provides a message called ``is\_busy'', which returns "true" while the long running action is not complete, and "false" once it is finished.
 Additionally, multiple clients can communicate with the same daemon simultaneously.
 A complex instrument may involve multiple operators watching sensor data in real time, while one program is orchestrating the hardware and recording the data.
 
 \section{Experimental Flexibility}
 
 Existing experimental orchestration software is often highly inflexible.
-An experimentalist will spend many hours in lab repeating acquisitions because it is too challenging to add repetition functionality to their software.
+An experimentalist will spend many hours in lab manually repeating acquisitions because it is too challenging to add repetition functionality to their software.
 A laser lab needs to spend weeks on software development when introducing a single new step into their experimental procedure.
 Researchers are disappointed to realize that they are forced to start from scratch when developing software for a similar instrument built with trivially different hardware.
+
+Unique experiments will always need custom orchestration and user experience.
+We believe that novel instrumentation development naturally and necessarily includes the creation of targeted software.
+Developing experimental software is an iterative process tied to the scientific goals of the instrument.
+Often experimentalists must apply their specialty scientific knowledge to develop this software.\cite{SegalJudith2005a} % citation does not compile
 
 In our view, software inflexibility is a natural consequence of the typical software development practices used by custom instrument builders.
 Instrumental software is often built as one monolithic program that does everything from providing a graphical interface, through hardware interfacing, and writing data files.
@@ -183,10 +188,6 @@ As such, instrumentation software development time is in conflict with valuable 
 The hardware interfaces that these programs implement are typically made quickly and without regard to standardization with similar hardware.
 The orchestration routines are intimately tied to the particular hardware configuration of one instrument.
 
-Unique experiments will always need custom orchestration and user experience.
-We believe that novel instrumentation development naturally and necessarily includes the creation of targeted software.
-Developing experimental software is an iterative process tied to the scientific goals of the instrument.
-Often experimentalists must apply their specialty scientific knowledge to develop this software.\cite{SegalJudith2005a} % citation does not compile
 \yaq{} is architected to encourage better software development practices when creating such programs.
 In a \yaq{} context, orchestration code and graphical control interfaces are implemented as clients.
 These clients are automatically simpler because they only need to implement the \yaq{} standard and do not need to include the vast array of hardware-specific communication interfaces.
